--- a/main.html
+++ b/main.html
@@ -1,16 +1,32 @@
-<!DOCTYPE html>
-
+ <!DOCTYPE html>
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <table>
+        <thead>
+            <tr>
+                <th>Roll number</th>
+                <th>Name</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>101</td>
+                <td>John Doe</td>
+            </tr>
+            <tr>
+                <td>102</td>
+                <td>Jane Smith</td>
+            </tr>
+            <!-- Add more rows as needed -->
+        </tbody>
+    </table>
 
+    <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
